HomeWork: 分析基本数据类型，四则运算，分支，循环，跳转，流程语句的ByteCode。自定义ClassLoader